--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -1,11 +1,11 @@
 swing-extras Release Notes
 Author: Steve Corbett
 
-Version 2.0.0 [pending]
+Version 2.0.0 [2025-04-13]
   - Absorbed app-extensions library into swing-extras
   - Absorbed swing-forms library into swing-extras
   - New unified demo app
-  - Moved documentation to corbett.ca and expanded
+  - Moved documentation to swing-extras-book and expanded
 
 Version 1.9.4 [2025-04-10]
   - Fix high CPU usage in PlaybackThread
