Updating README for 2.2.0 release

--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -1,9 +1,12 @@
 swing-extras Release Notes
 Author: Steve Corbett
 
-Version 2.2.0 [TODO] - Maintenance release
+Version 2.2.0 [2024-06-10] - ExtensionManager enhancements
+  #47 - AppProperties.reinitialize() should also call load()
+  #46 - add extension load order to log output
   #43 - PropertiesDialog should have a way to force subcat labels
   #42 - hide release notes on extension manager dialog
+  #41 - add a way to control extension load order
   #39 - Allow extensions to share config properties
   #33 - view extension config in ExtensionManagerDialog
   #32 - show source dir and jar file on extension manager dialog
