--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -5,6 +5,7 @@ Version 2.3.0 [TODO] - Maintenance release
   #64 - Add max version check to ExtensionManager
   #62 - Ensure extension config properties are only created once
   #61 - Add static peek() to AppProperties
+  #60 - Add ListField and ListProperty for multi-select
   #59 - Fix cosmetic issue on ExtensionManagerDialog
   #58 - Add extraAttributes to all properties/form fields
   #56 - Add ImageUtil.scaleImageToFitSquareBounds
