Final changes for 2.3 release!

--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -1,7 +1,7 @@
 swing-extras Release Notes
 Author: Steve Corbett
 
-Version 2.3.0 [TODO] - Maintenance release
+Version 2.3.0 [2025-07-20] - Maintenance release
   #67 - Minor bug in extension config preview
   #66 - Allow subclasses to control PropertiesDialog size
   #65 - FontField.setVisible() was not behaving as expected
