--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -1,6 +1,8 @@
 swing-extras Release Notes
 Author: Steve Corbett
 
+Version 2.4.0 [TODO] - swing-forms rewrite
+
 Version 2.3.0 [2025-07-20] - Maintenance release
   #67 - Minor bug in extension config preview
   #66 - Allow subclasses to control PropertiesDialog size
