--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.4.0 [TODO] - swing-forms rewrite
+  #69 - Fix uncaught exception during extension loading
 
 Version 2.3.0 [2025-07-20] - Maintenance release
   #67 - Minor bug in extension config preview
