--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -5,6 +5,7 @@ Version 2.4.0 [TODO] - swing-forms rewrite
   #82 - Refactor FieldValidator
   #80 - Refactor ValidationResult
   #78 - Refactor FormPanel
+  #74 - ComboProperty and ComboField are now generic
   #70 - Fix array index out of bounds in ListProperty
   #69 - Fix uncaught exception during extension loading
 
