--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.4.0 [TODO] - swing-forms rewrite
+  #102 - Make AboutPanel smarter about fonts
   #101 - Make FormField's default font customizable
   #100 - Split TextField into short and long fields
   #97 - refactor TextField constructors
