--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,8 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.4.0 [TODO] - swing-forms rewrite
+  #104 - Log and skip UnsupportedOpException in PropsManager
+  #103 - Merge ColorField and GradientColorField into one
   #102 - Make AboutPanel smarter about fonts
   #101 - Make FormField's default font customizable
   #100 - Split TextField into short and long fields
