--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -3,6 +3,7 @@ Author: Steve Corbett
 
 Version 2.4.0 [TODO] - swing-forms rewrite
   #106 - Allow ESC key to cancel props dialog
+  #105 - Add unit tests for all Properties
   #104 - Log and skip UnsupportedOpException in PropsManager
   #103 - Merge ColorField and GradientColorField into one
   #102 - Make AboutPanel smarter about fonts
