--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.5.0 [TODO release date] - TODO description
+  #126 - Fix resource loading issue in extensions
   #121 - README updates for 2.5.0
   #119 - Fix flickering during dynamic LongTextField resize
   #116 - Extensions: fix dynamic instantiation issue
