--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.5.0 [TODO release date] - TODO description
+  #130 - Better extension logging on initial load
   #127 - Performance improvements in FileSystemUtil
   #126 - Fix resource loading issue in extensions
   #121 - README updates for 2.5.0
