--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -7,6 +7,7 @@ Version 2.5.0 [TODO release date] - TODO description
   #127 - Performance improvements in FileSystemUtil
   #126 - Fix resource loading issue in extensions
   #121 - README updates for 2.5.0
+  #120 - FormField: setters should be fluent-style
   #119 - Fix flickering during dynamic LongTextField resize
   #116 - Extensions: fix dynamic instantiation issue
   #115 - Fix NullPointerException in Properties
