--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -11,6 +11,7 @@ Version 2.5.0 [TODO release date] - TODO description
   #119 - Fix flickering during dynamic LongTextField resize
   #116 - Extensions: fix dynamic instantiation issue
   #115 - Fix NullPointerException in Properties
+  #114 - FormField: pass on validate if field is invisible
 
 Version 2.4.0 [2025-09-01] - swing-forms rewrite
   #108 - ExtensionManager: fix config preview bug
