--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -4,6 +4,7 @@ Author: Steve Corbett
 Version 2.5.0 [TODO release date] - TODO description
   #130 - ExtensionManager: Better logging on initial load
   #129 - ImageUtil: Faster scanning of image dimensions
+  #128 - AboutPanel should warn about snapshot builds
   #127 - Performance improvements in FileSystemUtil
   #126 - Fix resource loading issue in extensions
   #121 - README updates for 2.5.0
