--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.5.0 [TODO release date] - TODO description
+  #135 - CustomizableDesktopPane: add solid color bg option
   #130 - ExtensionManager: Better logging on initial load
   #129 - ImageUtil: Faster scanning of image dimensions
   #128 - AboutPanel should warn about snapshot builds
