--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -5,6 +5,7 @@ Version 2.5.0 [TODO release date] - TODO description
   #135 - CustomizableDesktopPane: add solid color bg option
   #134 - ComboField should expose its underlying model
   #133 - ExtensionManager: change extension resource loading
+  #132 - LabelField: make hyperlinks smarter and easier
   #130 - ExtensionManager: Better logging on initial load
   #129 - ImageUtil: Faster scanning of image dimensions
   #128 - AboutPanel should warn about snapshot builds
