--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -11,6 +11,7 @@ Version 2.5.0 [TODO release date] - TODO description
   #128 - AboutPanel should warn about snapshot builds
   #127 - Performance improvements in FileSystemUtil
   #126 - Fix resource loading issue in extensions
+  #122 - FormPanel.setEnabled() now works as it should
   #121 - README updates for 2.5.0
   #120 - FormField: setters should be fluent-style
   #119 - Fix flickering during dynamic LongTextField resize
