--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -20,6 +20,7 @@ Version 2.5.0 [TODO release date] - TODO description
   #116 - Extensions: fix dynamic instantiation issue
   #115 - Fix NullPointerException in Properties
   #114 - FormField: pass on validate if field is invisible
+  #113 - FileProperty/DirectoryProperty wired up incorrectly
   #109 - swing-forms: add JSlider support with color options
 
 Version 2.4.0 [2025-09-01] - swing-forms rewrite
