--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.5.0 [TODO release date] - TODO description
+  #137 - Improved FormPanel.setBorderMargin() method
   #136 - AbstractProperty: add hook for form field generation
   #135 - CustomizableDesktopPane: add solid color bg option
   #134 - ComboField should expose its underlying model
