--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.5.0 [TODO release date] - TODO description
+  #154 - UpdateSource: force manifest and public key to same host
   #152 - New FormField: ImageListField
   #145 - Add FileSystemUtil.extractTextFileFromJar()
   #139 - Add FileSystemUtil.getPrintableSize()
