--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -6,6 +6,7 @@ Version 2.5.0 [TODO release date] - TODO description
   #156 - VersionManifest: use relative paths not URLs
   #154 - UpdateSource: force manifest and public key to same host
   #152 - New FormField: ImageListField
+  #150 - UpdateManager: handle downloads asynchronously
   #145 - Add FileSystemUtil.extractTextFileFromJar()
   #139 - Add FileSystemUtil.getPrintableSize()
   #138 - Add bounds checking to Margins class
