--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -3,6 +3,7 @@ Author: Steve Corbett
 
 Version 2.5.0 [TODO release date] - TODO description
   #160 - Add a way to compare version strings reliably
+  #159 - ImageListPanel: fix minor bug with owner window
   #156 - VersionManifest: use relative paths not URLs
   #154 - UpdateSource: force manifest and public key to same host
   #152 - New FormField: ImageListField
