--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -6,6 +6,7 @@ Version 2.5.0 [TODO release date] - TODO description
   #159 - ImageListPanel: fix minor bug with owner window
   #156 - VersionManifest: use relative paths not URLs
   #154 - UpdateSource: force manifest and public key to same host
+  #153 - ListField: use DefaultListModel as the starting point
   #152 - New FormField: ImageListField
   #151 - UpdateManager: better unit tests
   #150 - UpdateManager: handle downloads asynchronously
