--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -11,6 +11,7 @@ Version 2.5.0 [TODO release date] - TODO description
   #151 - UpdateManager: better unit tests
   #150 - UpdateManager: handle downloads asynchronously
   #145 - Add FileSystemUtil.extractTextFileFromJar()
+  #142 - PanelField/CollapsiblePanelField: handle setEnabled()
   #139 - Add FileSystemUtil.getPrintableSize()
   #138 - Add bounds checking to Margins class
   #137 - Improved FormPanel.setBorderMargin() method
