--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -12,6 +12,7 @@ Version 2.5.0 [TODO release date] - TODO description
   #152 - New FormField: ImageListField
   #151 - UpdateManager: better unit tests
   #150 - UpdateManager: handle downloads asynchronously
+  #149 - New dialog: PopupTextDialog
   #148 - MultiProgressDialog: add initial show delay option
   #147 - UpdateManager: add flag to allow SNAPSHOT downloads
   #146 - More customization options in FileField
