--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,11 +2,12 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.5.0 [TODO release date] - TODO description
-  #164 - general: callback listeners were not thread safe
+  #164 - General: callback listeners were not thread safe
   #161 - MessageUtil: fix warning icon
   #160 - Add a way to compare version strings reliably
   #159 - ImageListPanel: fix minor bug with owner window
   #156 - VersionManifest: use relative paths not URLs
+  #155 - General: smarten up listener handling
   #154 - UpdateSource: force manifest and public key to same host
   #153 - ListField: use DefaultListModel as the starting point
   #152 - New FormField: ImageListField
