--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -24,6 +24,7 @@ Version 2.5.0 [TODO release date] - TODO description
   #146 - More customization options in FileField
   #145 - Add FileSystemUtil.extractTextFileFromJar()
   #144 - UpdateManager: Support dynamic application restart
+  #143 - ExtensionManagerDialog: rewrite for update support
   #142 - PanelField/CollapsiblePanelField: handle setEnabled()
   #139 - Add FileSystemUtil.getPrintableSize()
   #138 - Add bounds checking to Margins class
