--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -39,6 +39,7 @@ Version 2.5.0 [TODO release date] - TODO description
   #134 - ComboField should expose its underlying model
   #133 - ExtensionManager: change extension resource loading
   #132 - LabelField: make hyperlinks smarter and easier
+  #131 - AboutPanel: show if newer version is available
   #130 - ExtensionManager: Better logging on initial load
   #129 - ImageUtil: Faster scanning of image dimensions
   #128 - AboutPanel should warn about snapshot builds
