--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.6.0 [TODO date here] - Maintenance release
+  #183 - Absorb SingleInstanceManager class from MusicPlayer
   #179 - ImageListPanel: fix minor drag-and-drop bug
   #175 - ExtensionManagerDialog: cache downloaded screenshots
   #174 - Improved logging in UpdateManager
