--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -5,6 +5,7 @@ Version 2.6.0 [TODO date here] - Maintenance release
   #183 - Absorb SingleInstanceManager class from MusicPlayer
   #180 - Add Property wrappers for panel fields
   #179 - ImageListPanel: fix minor drag-and-drop bug
+  #178 - New FormField: HtmlLabelField
   #175 - ExtensionManagerDialog: cache downloaded screenshots
   #174 - Improved logging in UpdateManager
   #173 - Fix minor bug when launching LogConsole from AboutDialog
