--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -1,7 +1,7 @@
 swing-extras Release Notes
 Author: Steve Corbett
 
-Version 2.6.0 [TODO date here] - Maintenance release
+Version 2.6.0 [2025-12-31] - Maintenance release
   #183 - Absorb SingleInstanceManager class from MusicPlayer
   #180 - Add Property wrappers for panel fields
   #179 - ImageListPanel: fix minor drag-and-drop bug
