--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -4,6 +4,7 @@ Author: Steve Corbett
 Version 2.6.0 [2025-12-31] - Maintenance release
   #215 - Fix minor bug in SingleInstanceManagerTest
   #213 - New utility method: FileSystemUtil.sanitizeFilename()
+  #212 - Absorb HyperlinkUtil from ExtPackager
   #210 - Allow CheckBoxField to get/set checkbox text
   #208 - New FieldValidator: ListEmptySelectionValidator
   #204 - PopupTextDialog: hide Cancel button in read-only mode
