--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,7 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.6.0 [2025-12-31] - Maintenance release
-  #220 - ListSubsetField: make auto-sorting optional (default: off)
+  #220 - ListSubsetField: auto-sorting is optional (default: off)
   #218 - Slight adjustment to HyperlinkUtil.BrowseAction
   #215 - Fix minor bug in SingleInstanceManagerTest
   #213 - New utility method: FileSystemUtil.sanitizeFilename()
