--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -3,6 +3,7 @@ Author: Steve Corbett
 
 Version 2.7.0 [TODO release date here] - Maintenance release
   TODO - Add line items for 2.7 here, one per ticket
+  #228 - Turn down scary exception logging in AppProperties
 
 Version 2.6.0 [2025-12-31] - Maintenance release
   #224 - Better extension error handling in ExtensionManager
