--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,7 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.7.0 [TODO release date here] - Maintenance release
-  TODO - Add line items for 2.7 here, one per ticket
+  #257 - new FileSystemUtil method: getUniqueDestinationFile()
   #256 - DirTree: remove Linux-specific logic
   #247 - DirTree: add selectionWillChange event with veto option
   #232 - DirTree: add option to show hidden files
