Issue #239 add border margin option in PropertiesManager

--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -5,10 +5,10 @@ Version 2.7.0 [TODO release date here] - Maintenance release
   #257 - new FileSystemUtil method: getUniqueDestinationFile()
   #256 - DirTree: remove Linux-specific logic
   #247 - DirTree: add selectionWillChange event with veto option
+  #239 - PropertiesManager: add option to set border margin
   #232 - DirTree: add option to show hidden files
   #230 - DirTree: mark factory methods as deprecated
   #228 - Turn down scary exception logging in AppProperties
-
 
 Version 2.6.0 [2025-12-31] - Maintenance release
   #224 - Better extension error handling in ExtensionManager
