--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -5,6 +5,7 @@ Version 2.7.0 [TODO release date here] - Maintenance release
   #257 - new FileSystemUtil method: getUniqueDestinationFile()
   #256 - DirTree: remove Linux-specific logic
   #247 - DirTree: add selectionWillChange event with veto option
+  #242 - Added more VersionStringComparator convenience methods
   #239 - PropertiesManager: add option to set border margin
   #232 - DirTree: add option to show hidden files
   #230 - DirTree: mark factory methods as deprecated
