Issue #252 - better validation in ImageUtil.loadImageIcon

--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -4,6 +4,7 @@ Author: Steve Corbett
 Version 2.7.0 [TODO release date here] - Maintenance release
   #257 - new FileSystemUtil method: getUniqueDestinationFile()
   #256 - DirTree: remove Linux-specific logic
+  #252 - ImageUtil: better validation in loadImageIcon
   #247 - DirTree: add selectionWillChange event with veto option
   #242 - Added more VersionStringComparator convenience methods
   #239 - PropertiesManager: add option to set border margin
