--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -12,6 +12,7 @@ Version 2.7.0 [TODO release date here] - Maintenance release
   #239 - PropertiesManager: add option to set border margin
   #232 - DirTree: add option to show hidden files
   #230 - DirTree: mark factory methods as deprecated
+  #229 - New utility class: KeyboardManager
   #228 - Turn down scary exception logging in AppProperties
 
 Version 2.6.0 [2025-12-31] - Maintenance release
