--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -5,6 +5,7 @@ Version 2.7.0 [TODO release date here] - Maintenance release
   #264 - ListSubsetField: fire value changed events when items move
   #257 - new FileSystemUtil method: getUniqueDestinationFile()
   #256 - DirTree: remove Linux-specific logic
+  #253 - ImagePanel: allow custom border to be set
   #252 - ImageUtil: better validation in loadImageIcon
   #247 - DirTree: add selectionWillChange event with veto option
   #245 - ListField: listener convenience methods; better javadoc
