--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -11,6 +11,7 @@ Version 2.7.0 [TODO release date here] - Maintenance release
   #245 - ListField: listener convenience methods; better javadoc
   #242 - Added more VersionStringComparator convenience methods
   #239 - PropertiesManager: add option to set border margin
+  #238 - EnumProperty: remove useNamesInsteadOfLabels option
   #232 - DirTree: add option to show hidden files
   #230 - DirTree: mark factory methods as deprecated
   #229 - New utility class: KeyboardManager
