--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -7,6 +7,7 @@ Version 2.7.0 [TODO release date here] - Maintenance release
   #256 - DirTree: remove Linux-specific logic
   #253 - ImagePanel: allow custom border to be set
   #252 - ImageUtil: better validation in loadImageIcon
+  #250 - AbstractProperty: add margin padding options
   #247 - DirTree: add selectionWillChange event with veto option
   #245 - ListField: listener convenience methods; better javadoc
   #242 - Added more VersionStringComparator convenience methods
