--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -10,6 +10,7 @@ Version 2.7.0 [TODO release date here] - Maintenance release
   #250 - AbstractProperty: add margin padding options
   #247 - DirTree: add selectionWillChange event with veto option
   #245 - ListField: listener convenience methods; better javadoc
+  #244 - LabelProperty: add ability to set field label text
   #242 - Added more VersionStringComparator convenience methods
   #239 - PropertiesManager: add option to set border margin
   #238 - EnumProperty: remove useNamesInsteadOfLabels option
