--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -3,7 +3,7 @@ Author: Steve Corbett
 
 Version 2.7.0 [TODO release date here] - Maintenance release
   #276 - MultiProgressDialog: make progress label configurable
-  #274 - Added KeyboardManagerField and KeyboardManagerProperty
+  #273 - Added KeyStrokeField and KeyStrokeProperty
   #264 - ListSubsetField: fire value changed events when items move
   #257 - new FileSystemUtil method: getUniqueDestinationFile()
   #256 - DirTree: remove Linux-specific logic
